--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "@tanstack/react-query": "^5.77.2",
     "add": "^2.0.6",
     "react": "19.0.0",
     "react-native": "0.79.2",
