--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
     "@react-native-firebase/firestore": "^22.2.0",
@@ -19,10 +20,11 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@tanstack/react-query": "^5.77.2",
     "add": "^2.0.6",
+    "dayjs": "^1.11.13",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.0",
+    "react-native-screens": "^4.11.1",
     "yarn": "^1.22.22",
     "zustand": "^5.0.5"
   },
