--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
+    "dayjs": "^1.11.13",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0",
-    "dayjs": "^1.11.13"
+    "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -26,6 +27,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
+    "typescipt": "^1.0.0",
     "typescript": "^4.9.0"
   },
   "private": true
