--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/core": "^7.27.3",
     "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.27.1",
     "@babel/runtime": "^7.27.3",
     "@react-native-community/cli": "18.0.0",
     "@react-native-community/cli-platform-android": "18.0.0",
@@ -44,6 +45,7 @@
     "@types/react": "^19.1.6",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "^3.5.3",
