--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.13",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-calendars": "^1.1312.1",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "yarn": "^1.22.22",
