--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.77.2",
     "add": "^2.0.6",
     "dayjs": "^1.11.13",
+    "dayjs-lunar": "^0.0.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.1",
