--- a/app/package.json
+++ b/app/package.json
@@ -23,10 +23,12 @@
     "dayjs": "^1.11.13",
     "dayjs-lunar": "^0.0.3",
     "react": "19.0.0",
+    "react-hook-form": "^7.58.1",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.1",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
     "yarn": "^1.22.22",
     "zustand": "^5.0.5"
   },
