--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
+    "react-native-svg-transformer": "^1.5.1",
     "yarn": "^1.22.22",
     "zustand": "^5.0.5"
   },
