--- a/app/package.json
+++ b/app/package.json
@@ -21,11 +21,15 @@
     "@tanstack/react-query": "^5.77.2",
     "add": "^2.0.6",
     "dayjs": "^1.11.13",
+    "dayjs-lunar": "^0.0.3",
     "react": "19.0.0",
+    "react-hook-form": "^7.58.1",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.1",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
+    "react-native-svg-transformer": "^1.5.1",
     "yarn": "^1.22.22",
     "zustand": "^5.0.5"
   },
