--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "ENVFILE=.env.development react-native run-android",
+    "ios": "ENVFILE=.env.development react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start --client-logs",
     "test": "jest"
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.58.1",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.1",
+    "react-native-config": "^1.5.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
