--- a/functions/package.json
+++ b/functions/package.json
@@ -25,8 +25,10 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
+    "prettier": "^3.6.2",
     "typescipt": "^1.0.0",
     "typescript": "^4.9.0"
   },
