--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -15,8 +15,5 @@
     "skipLibCheck": true
   },
   "compileOnSave": true,
-  "include": [
-    "src",
-    ".eslintrc.js"
-  ]
+  "include": ["src", ".eslintrc.js"]
 }
